# CPP_Image_Conversion

./: README.md
src/: CMakeLists.txt
src/aos/: calls_aos.cpp  calls_aos.hpp  copy_aos.cpp  copy_aos.hpp  gauss_aos.cpp  gauss_aos.hpp  hist_aos.cpp  hist_aos.hpp  lectura_aos.cpp  lectura_aos.hpp  mono_aos.cpp  mono_aos.hpp
src/common/: parameters_bmp.cpp  parameters_bmp.hpp  progargs.cpp  progargs.hpp  utilidades.cpp  utilidades.hpp
src/image-aos/: imgaos.cpp
src/image-soa/: imgsoa.cpp
src/soa/: calls_soa.cpp  calls_soa.hpp  copy_soa.cpp  copy_soa.hpp  gauss_soa.cpp  gauss_soa.hpp  hist_soa.cpp  hist_soa.hpp  lectura_soa.cpp  lectura_soa.hpp  mono_soa.cpp  mono_soa.hpp
